# preagonal-client-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  logging_config.yaml
.github/workflows/: ci-cd.yml
config/: client-example.toml
scripts/: entrypoint.sh
src/: config.rs  consts.rs  main.rs  utils.rs
src/discord/: mod.rs
src/discord/commands/: add_weapon.rs  get_weapon.rs  mod.rs  sendtorc.rs
src/io/: io_async.rs  io_sync.rs  io_vec.rs  mod.rs
src/net/: mod.rs
src/net/client/: connection.rs.old  game.rs  gclient.rs  mod.rs  nc.rs  rc.rs
src/net/client/nc/: config.rs  mod.rs
src/net/client/rc/: config.rs  mod.rs
src/net/packet/: mod.rs
src/net/packet/from_client/: game_login.rs  mod.rs  nc_login.rs  nc_query.rs  nc_weapon_add.rs  nc_weapon_get.rs  rc_chat.rs  rc_login.rs
src/net/packet/from_server/: mod.rs  nc_weapon_get.rs  weapon_script.rs
src/net/protocol/: mod.rs  proto_v4.rs  proto_v5.rs  proto_v6.rs  proto_v6_header.rs
src/net/serialization/: error.rs  mod.rs  serialize.rs
