[package]
name = "preagonal-client-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bzip2 = "0.5.1"
flate2 = "1.1.0"
log = "0.4.26"
log4rs = "1.3.0"
rand = "0.9.0"
reqwest = "0.12.12"
serde = "1.0.218"
serenity = "0.12.4"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-console = "0.1.13"
toml = "0.8.20"
